remove top button

--- a/index7.html
+++ b/index7.html
@@ -46,6 +46,9 @@
             });
            */
 
+            let rendererWidth = 300;
+            let rendererHeight = 300;
+
             initC("mainPanel","Gray",5,90,5,90);
             initC("rangePanel","LightGray",2,68,62,16);
             initC("buttonPanel","LightGray",72,26,62,16);
@@ -148,9 +151,8 @@
     </div>
 
 </div>
-<button type="button" id="but" onclick="myFunction()">Try it</button>
-
-
+ <!-- <button type="button" id="but" onclick="myFunction()">Try it</button>  -->
+<canvas>
 
 </body>
 </html>
