--- a/index7.html
+++ b/index7.html
@@ -45,7 +45,7 @@
 
             });
            */
-
+            //this section contains 3js specific
             let rendererWidth = 300;
             let rendererHeight = 300;
 
