--- a/index7.html
+++ b/index7.html
@@ -6,6 +6,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+    <script src="three.js" ></script>
+
 
     <script>
 
@@ -45,9 +47,11 @@
 
             });
            */
-            //this section contains 3js specific
-            let rendererWidth = 300;
-            let rendererHeight = 300;
+
+
+
+
+
 
             initC("mainPanel","Gray",5,90,5,90);
             initC("rangePanel","LightGray",2,68,62,16);
@@ -55,13 +59,20 @@
 
 
 
-            initC("R1","Orange",10,70,15,15);
+            initC("R1","Orange",20,60,15,15);
             $("#R1").attr("step","0.1");
-            initC("NR1","LightGreen",2,6,15,15);
+            initC("NR1","LightGreen",2,16,15,15);
             initC("VR1","LightGreen",85,10,15,15);
-            $("#NR1").text("R1");
-            $("#VR1").text($("#R1").val());
-            $("#R1").on("input",function(){ $("#VR1").text($("#R1").val())});
+
+            //next lines 3js Ev 1 -----
+
+            $("#NR1").text("Rot Speed");
+            //$("#NR1").text("R1");
+            //$("#NR1").text("R1");
+            $("#VR1").text("Arb");
+            //$("#VR1").text($("#R1").val());
+            // $("#R1").on("input",function(){ $("#VR1").text($("#R1").val())});
+            // -----
 
             initC("R2","Orange",10,70,30,15);
             $("#R2").attr("step","0.1");
@@ -98,6 +109,68 @@
             $("#B4").text("B4");
             $("#B4").click(function(){alert("button B4 pressed");});//insert action or call func
 
+
+
+            //3js Ev1 ------
+            // example based on 3js web site intro tutorial
+            //https://threejsfundamentals.org/threejs/lessons/threejs-fundamentals.html
+
+            const canvas = document.querySelector('#c');
+            const renderer = new THREE.WebGLRenderer({canvas});
+            const fov = 75;
+            const aspect = 2;  // the canvas default
+            const near = 0.1;
+            const far = 5;
+            const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+            camera.position.z = 2;
+            camera.position.x = 0.3;
+
+            const scene = new THREE.Scene();
+
+            {
+                const color = 0xFFFFFF;
+                const intensity = 1;
+                const light = new THREE.DirectionalLight(color, intensity);
+                light.position.set(-1, 2, 4);
+                scene.add(light);
+            }
+
+            const boxWidth = 1;
+            const boxHeight = 1;
+            const boxDepth = 1;
+            const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+
+            const material = new THREE.MeshPhongMaterial({color: 0x44aa88});  // greenish blue
+
+            const cube = new THREE.Mesh(geometry, material);
+            let rot =0;
+            let divider =0;
+            scene.add(cube);
+
+            renderer.render(scene, camera);
+            function  render(time) {
+                //removed example code using time
+                //as I want to use a slider
+                //time *= 0.001;  // convert time to seconds
+
+                // prevent divider becoming zero by adding 1
+                //as slider min = zero
+                divider = 1 + parseInt($("#R1").val());
+
+                rot += (0.2 / divider);
+                cube.rotation.y =  rot ;
+                cube.rotation.x = rot/10;
+
+
+                renderer.render(scene, camera);
+
+                requestAnimationFrame(render);
+            }
+            requestAnimationFrame(render);
+
+        //-----
+
+
         });
 
 
@@ -123,9 +196,13 @@
 
 <body>
 
+
+
+
+
 <div id="mainPanel">
 
-
+    <canvas id="c" width="800" height="400"></canvas>
 
     <div id="rangePanel">
         <input type="range" id="R1" name="range1" min="0" max="10">
@@ -152,7 +229,7 @@
 
 </div>
  <!-- <button type="button" id="but" onclick="myFunction()">Try it</button>  -->
-<canvas>
+
 
 </body>
 </html>
