--- a/Index10.html
+++ b/Index10.html
@@ -123,6 +123,8 @@
 
             let canvas = document.querySelector('#c');
             let renderer = new THREE.WebGLRenderer({canvas});
+
+            //*****CAMERA*****
             let fov = 75;
             let aspect = 2;  // the canvas default
             let near = 0.1;
@@ -130,6 +132,8 @@
             let camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
             camera.position.z = 2;
             camera.position.x = 0.02;
+
+            //*****SCENE AND LIGHTS*****
 
             let scene = new THREE.Scene();
 
@@ -140,6 +144,8 @@
                 light.position.set(-1, 2, 4);
                 scene.add(light);
             }
+
+            //*****CUBE*****
 
             let boxWidth = 1;
             let boxHeight = 1;
@@ -153,10 +159,14 @@
             let divider =0;
             scene.add(cube);
 
-            // show axes in the screen
+            //*****AXES*****
+
+
             var axes = new THREE.AxesHelper(3);
             scene.add(axes);
 
+
+            //*****PLANE*****
             // create the ground plane
             var planeGeometry = new THREE.PlaneGeometry(6, 6);
             var planeMaterial = new THREE.MeshBasicMaterial({
@@ -173,13 +183,8 @@
             // add the plane to the scene
             scene.add(plane);
 
-            // create a cube
-            var cubeGeometry = new THREE.BoxGeometry(4, 4, 4);
-            var cubeMaterial = new THREE.MeshBasicMaterial({
-                color: 0xFF0000,
-                wireframe: true
-            });
 
+            //*****RENDER SETUP*****
 
             renderer.setClearColor(new THREE.Color(0x000000));
             renderer.render(scene, camera);
@@ -194,6 +199,8 @@
                 }
                 return needResize;
             }
+
+            //****MAIN RENDER FUNCTION*****
             function  render(time) {
                 //removed example code using time
                 //as I want to use a slider
@@ -224,12 +231,15 @@
 
                 requestAnimationFrame(render);
             }
+
+            //*****START RENDERER FUNCTION*****
+
             requestAnimationFrame(render);
 
             //-----
 
 
-        });
+        });//******END READY FUNCTION*****
 
     </script>
     <script src="01-02.js"></script>
