save and load glb stuff

--- a/Index11.html
+++ b/Index11.html
@@ -162,6 +162,7 @@
             var myDuck;
 
             loader.load( './Duck.glb', function(gltf) {
+                //loader.load( './sphere1.glb', function(gltf) {
 
                 //scene.add(gltf.scene);
                 myObj.add(gltf.scene);
