--- a/index14.html
+++ b/index14.html
@@ -19,7 +19,7 @@
 
 
 
-var rotating = true;
+
 
         function initC(idStr,colStr,l,w,t,h) {
 
@@ -42,91 +42,83 @@ var rotating = true;
 
         $(document).ready(function () {
 
-            /*
 
-            $("#blue").css({
-                "background-color": "LightGray",
-                "position":"absolute",
-                "left":"20%",
-                "width":"50%",
-                "top":"5%",
-                "height":"50%"
+            var rotating = true;
 
+            //Set up GUI
+            {
+                initC("mainPanel", "Gray", 5, 90, 5, 90);
 
-
-
-            });
-           */
+                initC("c", "Black", 5, 90, 5, 45);
+                initC("rangePanel", "LightGray", 2, 68, 62, 16);
+                initC("buttonPanel", "LightGray", 72, 26, 62, 16);
+                initC("rotating","LightGreen",0,10,50,20);
+                initC("NCB1","LightGreen",10,15,50,20);
+                $("#NCB1").text("Rotate");
 
 
-            initC("mainPanel", "Gray", 5, 90, 5, 90);
-            initC("c", "Black", 5, 90, 5, 45);
-            initC("rangePanel", "LightGray", 2, 68, 62, 16);
-            initC("buttonPanel", "LightGray", 72, 26, 62, 16);
+                initC("R1", "Orange", 20, 60, 15, 15);
+                $("#R1").attr("step", "0.1");
+                initC("NR1", "LightGreen", 2, 16, 15, 15);
+                initC("VR1", "LightGreen", 85, 10, 15, 15);
+
+                //next lines 3js Ev 1 -----
+
+                $("#NR1").text("Rot Speed");
+                //$("#NR1").text("R1");
+                //$("#NR1").text("R1");
+                $("#VR1").text("Arb");
+                //$("#VR1").text($("#R1").val());
+                // $("#R1").on("input",function(){ $("#VR1").text($("#R1").val())});
+                // -----
+
+                initC("R2", "Orange", 10, 70, 30, 15);
+                $("#R2").attr("step", "0.1");
+                initC("NR2", "LightGreen", 2, 6, 30, 15);
+                initC("VR2", "LightGreen", 85, 10, 30, 15);
+                $("#NR2").text("R2");
+                $("#VR2").text($("#R2").val());
+                $("#R2").on("input", function () {
+                    $("#VR2").text($("#R2").val())
+                });
+
+                initC("R3", "Orange", 10, 70, 45, 15);
+                $("#R3").attr("step", "0.1");
+                initC("NR3", "LightGreen", 2, 6, 45, 15);
+                initC("VR3", "LightGreen", 85, 10, 45, 15);
+                $("#NR3").text("R3");
+                $("#VR3").text($("#R3").val());
+                $("#R3").on("input", function () {
+                    $("#VR3").text($("#R3").val())
+                });
 
 
-            initC("R1", "Orange", 20, 60, 15, 15);
-            $("#R1").attr("step", "0.1");
-            initC("NR1", "LightGreen", 2, 16, 15, 15);
-            initC("VR1", "LightGreen", 85, 10, 15, 15);
+                initC("B1", "LightBlue", 4, 20, 5, 15);
+                initC("B2", "LightBlue", 28, 20, 5, 15);
+                initC("B3", "LightBlue", 52, 20, 5, 15);
+                initC("B4", "LightBlue", 76, 20, 5, 15);
 
-            //next lines 3js Ev 1 -----
+                $("#B1").text("B1");
+                $("#B1").click(function () {
+                    exportGLTF(scene)
+                });//insert action or call func
 
-            $("#NR1").text("Rot Speed");
-            //$("#NR1").text("R1");
-            //$("#NR1").text("R1");
-            $("#VR1").text("Arb");
-            //$("#VR1").text($("#R1").val());
-            // $("#R1").on("input",function(){ $("#VR1").text($("#R1").val())});
-            // -----
-
-            initC("R2", "Orange", 10, 70, 30, 15);
-            $("#R2").attr("step", "0.1");
-            initC("NR2", "LightGreen", 2, 6, 30, 15);
-            initC("VR2", "LightGreen", 85, 10, 30, 15);
-            $("#NR2").text("R2");
-            $("#VR2").text($("#R2").val());
-            $("#R2").on("input", function () {
-                $("#VR2").text($("#R2").val())
-            });
-
-            initC("R3", "Orange", 10, 70, 45, 15);
-            $("#R3").attr("step", "0.1");
-            initC("NR3", "LightGreen", 2, 6, 45, 15);
-            initC("VR3", "LightGreen", 85, 10, 45, 15);
-            $("#NR3").text("R3");
-            $("#VR3").text($("#R3").val());
-            $("#R3").on("input", function () {
-                $("#VR3").text($("#R3").val())
-            });
+                $("#B2").text("B2");
+                $("#B2").click(function () {
+                    alert("button B2 pressed");
+                });//insert action or call func
 
 
-            initC("B1", "LightBlue", 4, 20, 5, 15);
-            initC("B2", "LightBlue", 28, 20, 5, 15);
-            initC("B3", "LightBlue", 52, 20, 5, 15);
-            initC("B4", "LightBlue", 76, 20, 5, 15);
+                $("#B3").text("B3");
+                $("#B3").click(function () {
+                    alert("button B3 pressed");
+                });//insert action or call func
 
-            $("#B1").text("B1");
-            $("#B1").click(function () {
-                exportGLTF(scene)
-            });//insert action or call func
-
-            $("#B2").text("B2");
-            $("#B2").click(function () {
-                alert("button B2 pressed");
-            });//insert action or call func
-
-
-            $("#B3").text("B3");
-            $("#B3").click(function () {
-                alert("button B3 pressed");
-            });//insert action or call func
-
-            $("#B4").text("B4");
-            $("#B4").click(function () {
-                alert("button B4 pressed");
-            });//insert action or call func
-
+                $("#B4").text("B4");
+                $("#B4").click(function () {
+                    alert("button B4 pressed");
+                });//insert action or call func
+            }
 
             //SEC export
             {
@@ -492,6 +484,7 @@ var rotating = true;
 
     <div id="buttonPanel">
         <input type="checkbox" id="rotating" name="rotating" checked=true>
+        <div id="NCB1"><</div>
         <button id="B1" name="button1"></button>
         <button id="B2" name="button2"></button>
         <button id="B3" name="button3"></button>
