Simple Sprites added

--- a/index14.html
+++ b/index14.html
@@ -384,6 +384,23 @@
 */
             }
 
+            // Sprite create
+
+
+
+            var matSprite = new THREE.SpriteMaterial();
+
+
+            for (var xx = 3; xx < 6; xx++) {
+                for (var yy = 3; yy < 6; yy++) {
+
+                 var sprite = new THREE.Sprite(matSprite);
+                 sprite.position.set(xx,yy,0);
+                 sprite.scale.set(0.1,0.1,0.1);
+                 scene.add(sprite);
+                }
+            }
+
 
 
             //*****RENDER SETUP*****
