--- a/index14.html
+++ b/index14.html
@@ -385,21 +385,46 @@
             }
 
             // Sprite create
+            {
+
+                var matSprite = new THREE.SpriteMaterial();
 
 
+                for (var xx = 3; xx < 6; xx++) {
+                    for (var yy = 3; yy < 6; yy++) {
 
-            var matSprite = new THREE.SpriteMaterial();
-
-
-            for (var xx = 3; xx < 6; xx++) {
-                for (var yy = 3; yy < 6; yy++) {
-
-                 var sprite = new THREE.Sprite(matSprite);
-                 sprite.position.set(xx,yy,0);
-                 sprite.scale.set(0.1,0.1,0.1);
-                 scene.add(sprite);
+                        var sprite = new THREE.Sprite(matSprite);
+                        sprite.position.set(xx, yy, 0);
+                        sprite.scale.set(0.1, 0.1, 0.1);
+                        scene.add(sprite);
+                    }
                 }
+
             }
+
+            //SEC Point cloud
+
+            var vertices = [];
+
+            for ( var i = 0; i < 10000; i ++ ) {
+
+                var x = THREE.MathUtils.randFloatSpread( 200 );
+                var y = THREE.MathUtils.randFloatSpread( 200 );
+                var z = THREE.MathUtils.randFloatSpread( 200 );
+
+                vertices.push( x, y, z );
+
+            }
+
+            var geomPC = new THREE.BufferGeometry();
+
+            geomPC.setAttribute( 'position', new THREE.Float32BufferAttribute( vertices, 3 ) );
+
+            var matPC = new THREE.PointsMaterial({size:2, color : 0x888888 });
+
+            var points = new THREE.Points( geomPC, matPC );
+
+            scene.add( points );
 
 
 
@@ -439,6 +464,8 @@
                     geom2.uvsNeedUpdate = true;
                 }
 
+                //SEC TBC MorphTargets
+
                 //SEC Zshift and rotate some items.
                 {
 
@@ -452,6 +479,7 @@
                     rot += (0.64 / divider);
                     meshT.rotation.y = rot / 5;
                     cube.rotation.x = rot / 10;
+                    points.rotation.y = rot/2;
                     aParameterThing.rotation.y = rot / 10;
                     //aParameterThing.rotation.x =rot/10;
                     //aParameterThing.rotation.z = rot/20;
